--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_script:
   - composer install --dev --prefer-source
 
 script:
+  - ./vendor/bin/phpunit --coverage-clover ./build/logs/clover.xml
   - ./bin/check-cs.sh
   
 notifications:
