--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "zf2",
         "zend",
         "module",
-        "apigiltiy",
+        "apigility",
         "documentation",
         "swagger"
     ],
@@ -25,10 +25,13 @@
     },
     "require": {
         "php": ">=5.3.23",
-        "zendframework/zendframework": "~2.3"
+        "zendframework/zendframework": "~2.3",
+        "zfcampus/zf-api-problem": "~1.0-dev",
+        "zfcampus/zf-content-negotiation": "~1.0-dev"
     },
     "require-dev": {
-        "fabpot/php-cs-fixer": "*@dev"
+        "fabpot/php-cs-fixer": "*@dev",
+        "phpunit/PHPUnit": "3.7.*"
     },
     "autoload": {
         "psr-4": {
