--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ before_script:
   - composer install --dev --prefer-source
 
 script:
-  - ./vendor/bin/phpunit --coverage-clover ./build/logs/clover.xml
-  - ./bin/check-cs.sh
+  - ./vendor/bin/phpunit
+  - ./vendor/bin/php-cs-fixer -v fix . --dry-run --config-file ./.php_cs
 
 notifications:
   irc: "irc.freenode.org#apigility-dev"
