--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,19 @@
     },
     "require": {
         "php": ">=5.3.23",
-        "zendframework/zendframework": "~2.3",
+        "zendframework/zend-eventmanager": "~2.3",
+        "zendframework/zend-mvc": "~2.3",
+        "zendframework/zend-servicemanager": "~2.3",
+        "zendframework/zend-view": "~2.3",
         "zfcampus/zf-api-problem": "~1.0-dev",
         "zfcampus/zf-content-negotiation": "~1.0-dev"
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "*@dev",
-        "phpunit/PHPUnit": "3.7.*"
+        "phpunit/PHPUnit": "3.7.*",
+        "zendframework/zend-http": "~2.3",
+        "zendframework/zend-loader": "~2.3",
+        "zendframework/zend-stdlib": "~2.3"
     },
     "autoload": {
         "psr-4": {
