--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
+        },
+        "branch-alias": {
+            "dev-develop": "1.1-dev"
         }
     },
     "require": {
@@ -29,8 +32,8 @@
         "zendframework/zend-mvc": "~2.3",
         "zendframework/zend-servicemanager": "~2.3",
         "zendframework/zend-view": "~2.3",
-        "zfcampus/zf-api-problem": "~1.0-dev",
-        "zfcampus/zf-content-negotiation": "~1.0-dev"
+        "zfcampus/zf-api-problem": "~1.0",
+        "zfcampus/zf-content-negotiation": "~1.0"
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "*@dev",
