--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "zendframework/zend-servicemanager": "~2.3",
         "zendframework/zend-view": "~2.3",
         "zfcampus/zf-api-problem": "~1.0",
+        "zfcampus/zf-apigility-documentation": "~1.0",
         "zfcampus/zf-content-negotiation": "~1.0"
     },
     "require-dev": {
