--- a/composer.json
+++ b/composer.json
@@ -25,21 +25,21 @@
         }
     },
     "require": {
-        "php": ">=5.3.23",
-        "zendframework/zend-eventmanager": ">=2.3,<2.5",
-        "zendframework/zend-mvc": ">=2.3,<2.5",
-        "zendframework/zend-servicemanager": ">=2.3,<2.5",
-        "zendframework/zend-view": ">=2.3,<2.5",
+        "php": ">=5.5",
+        "zendframework/zend-eventmanager": "~2.3",
+        "zendframework/zend-mvc": "~2.3",
+        "zendframework/zend-servicemanager": "~2.3",
+        "zendframework/zend-view": "~2.3",
         "zfcampus/zf-api-problem": "~1.0",
         "zfcampus/zf-apigility-documentation": "~1.0",
         "zfcampus/zf-content-negotiation": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.7",
-        "squizlabs/php_codesniffer": "^2.3",
-        "zendframework/zend-http": ">=2.3,<2.5",
-        "zendframework/zend-loader": ">=2.3,<2.5",
-        "zendframework/zend-stdlib": ">=2.3,<2.5"
+        "squizlabs/php_codesniffer": "^2.3.1",
+        "zendframework/zend-http": "~2.3",
+        "zendframework/zend-loader": "~2.3",
+        "zendframework/zend-stdlib": "~2.3"
     },
     "autoload": {
         "psr-4": {
