--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "branch-alias": {
             "dev-master": "1.1-dev",
             "dev-develop": "1.2-dev"
+        },
+        "zf": {
+            "module": "ZF\\Apigility\\Documentation\\Swagger"
         }
     },
     "require": {
