--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,21 @@
 {
     "name": "zfcampus/zf-apigility-documentation-swagger",
     "description": "Apigility API Swagger documentation module",
-    "type": "library",
     "license": "BSD-3-Clause",
     "keywords": [
-        "zf2",
-        "zend",
+        "zf",
+        "zendframework",
         "module",
         "apigility",
         "documentation",
         "swagger"
     ],
-    "homepage": "http://apigility.org/",
     "support": {
-        "email": "apigility-users@zend.com",
-        "irc": "irc://irc.freenode.net/apigility",
+        "issues": "https://github.com/zfcampus/zf-apigility-documentation-swagger/issues",
         "source": "https://github.com/zfcampus/zf-apigility-documentation-swagger",
-        "issues": "https://github.com/zfcampus/zf-apigility-documentation-swagger/issues"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.2-dev",
-            "dev-develop": "1.3-dev"
-        },
-        "zf": {
-            "module": "ZF\\Apigility\\Documentation\\Swagger"
-        }
+        "rss": "https://github.com/zfcampus/zf-apigility-documentation-swagger/releases.atom",
+        "chat": "https://zendframework-slack.herokuapp.com",
+        "forum": "https://discourse.zendframework.com/c/questions/apigility"
     },
     "require": {
         "php": "^5.6 || ^7.0",
@@ -53,6 +43,18 @@
             "ZFTest\\Apigility\\Documentation\\Swagger\\": "test/"
         }
     },
+    "config": {
+        "sort-packages": true
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.2.x-dev",
+            "dev-develop": "1.3.x-dev"
+        },
+        "zf": {
+            "module": "ZF\\Apigility\\Documentation\\Swagger"
+        }
+    },
     "scripts": {
         "check": [
             "@cs-check",
@@ -60,6 +62,7 @@
         ],
         "cs-check": "phpcs",
         "cs-fix": "phpcbf",
-        "test": "phpunit"
+        "test": "phpunit --colors=always",
+        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
     }
 }
