--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "zendframework/zend-eventmanager": "^2.6.3 || ^3.0.1",
-        "zendframework/zend-mvc": "^2.7.9 || ^3.0.2",
+        "zendframework/zend-mvc": "^2.7.15 || ^3.0.4",
         "zendframework/zend-servicemanager": "^2.7.6 || ^3.1",
         "zendframework/zend-view": "^2.8.1",
         "zfcampus/zf-api-problem": "^1.2.1",
@@ -28,8 +28,8 @@
         "zfcampus/zf-content-negotiation": "^1.2.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.7",
-        "squizlabs/php_codesniffer": "^2.3.1",
+        "phpunit/phpunit": "^5.7.27 || ^6.5.8 || ^7.1.5",
+        "zendframework/zend-coding-standard": "~1.0.0",
         "zendframework/zend-http": "^2.5.4",
         "zendframework/zend-stdlib": "^2.7.7 || ^3.0.1"
     },
